--- a/week1/day2/test.html
+++ b/week1/day2/test.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h2>test2</h2> 
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique sapiente, quis accusamus voluptates perspiciatis quam cum magnam, atque neque nostrum earum ratione commodi nisi modi officiis enim deserunt hic itaque.</p>
 </body>
 </html>
