--- a/week1/day1/index.html
+++ b/week1/day1/index.html
@@ -33,5 +33,7 @@
         </ol>
     </li>
 </ul>
+<a>Click Here to visit Facebook</a><br>
+<a href="clirecap.html">Click Here to visit Recap</a>
 </body>
 </html>
