--- a/week1/day1/index.html
+++ b/week1/day1/index.html
@@ -33,7 +33,29 @@
         </ol>
     </li>
 </ul>
-<a>Click Here to visit Facebook</a><br>
-<a href="clirecap.html">Click Here to visit Recap</a>
+<a href="clirecap.html">Click Here to visit Recap</a><br><br>
+<img src="The_Benefits_of_Swimming.jpg" alt="Swimming outfit" width="200px"><br>
+<p>Click on the below to check my profile</p>
+<a href="https://www.tiktok.com/explore" target="_blank"><img src="ticktok.png" alt="tiktokprofile" width="75px"></a>
+<a href="https://www.facebook.com/" target="_blank"><img src="fb.jpeg" alt="fbprofile" width="75px"></a><br>
+<table border="2px">
+    <tr>
+        <th>ID</th>
+        <th>Name</th>
+        <th>Age</th>
+    </tr>
+    <tr>
+        <td>1</td>
+        <td>Abraham</td>
+        <td>25</td>
+    </tr>
+    <tr>
+        <td>2</td>
+        <td>Will smith</td>
+        <td>55</td>
+    </tr>
+</table>
+<p>This is a sample. And <q>Here is our quote</q></p>
+<a href="signup.html" target="_blank">Sign up page</a>
 </body>
 </html>
