--- a/week1/day1/index.html
+++ b/week1/day1/index.html
@@ -4,6 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        h1{
+            color: blue;
+        }
+        p{
+            color: brown;
+        }
+        #favpara  {
+            color: yellow;
+        }
+        .formula{
+            color: red;
+            border: 2px solid;
+            font-size: 10px;
+        }
+        #swim{
+            color: skyblue;
+        }
+    </style>
 </head>
 <body>
     <!-- <h1>Welcome to DI</h1>
@@ -20,10 +39,13 @@
 <h1>Estelle Manon</h1>
 <H3>Born on the 22 April 1996</H3>
 <p><i>I am 29 years old</i></p>
-<p><b>The reason i started to code is:</b><br>To increase my knowledge and see a new perpective of doing things<br>Also create new tool that could help</p>
-<p><b>My Favorite Hobbies </b></p>
+<p><b>The reason i started to code is:</b><br></p>
+<p>To increase my knowledge and see a new perpective of doing things<br>Also create new tool that could help</p>
+<p id="favpara"><b>My Favorite Hobbies </b></p>
+<p class="formula">E= MC<sup>2</sup></p>
+<p  class="formula">F= Ma<sup>2</sup></p>
 <ul>
-    <li>Swimming</li>
+    <li id="swim">Swimming</li>
     <li>Walking</li>
     <li>Watching films
         <ol>
