--- a/week1/day1/signup.html
+++ b/week1/day1/signup.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        h1 {
+            color: blue;
+            font-size: 75px;
+        }
+    </style>
 </head>
 <body>
     <h1>Signup Page</h1>
+    <span>This is a welcoming text</span><span>please write your details</span>
     <form action="">
         <label> Username </label><input type="text"><br>
         <label> Password </label><input type="password"><br>
