--- a/week1/day2/ExercisesXP/index.html
+++ b/week1/day2/ExercisesXP/index.html
@@ -43,6 +43,6 @@
         <td style="white-space: nowrap;">Lions spend much of their time and resting, and are inactive for about 20 hours per day.</td>
     </tr>
 </table><br>
-<img src="pexels-pixabay-36843.jpg" alt="Lion" width="600" height="500" style="border: 5px solid orange">
+<img src="pexels-pixabay-36843.jpg" alt="Lion" width="600" height="500" style="border: 5px solid orange position: relative;">
 </body>
 </html>
