--- a/week1/day2/ExcercisesXPGold/index.html
+++ b/week1/day2/ExcercisesXPGold/index.html
@@ -9,22 +9,26 @@
   <body>
     <!-- content here -->
      <h2>Start Bootstrap</h2>
+     <form id="signin">
+        <input type="submit" value="Sign In"><br>
+     </form>
      <div>
-     <h1>Buil a landing page for your business or project and generate more leads!</h1>
+     <h1>Build a landing page for your business or project and generate more leads!</h1>
      <form>
-        <label for="Enter your email..."></label><input type="email">
+        <label for="Enter your email..."></label><input type="email" placeholder="Enter your email..." >
         <input type="submit" value="Sign up!"><br>
+        </form>
         </div>
         <table>
             <tr>
+                <td><i class="fa-solid fa-computer fa-2xl" style="color: #74C0FC;"></i></td>
+                <td><i class="fa-solid fa-layer-group fa-2xl" style="color: #74C0FC;"></i></td>
+                <td><i class="fa-solid fa-code fa-2xl" style="color: #74C0FC;"></i></td>
+            </tr>
+              <tr>
                 <th>Fully Responsive</th>
                 <th>Bootstrap 4 Ready</th>
                 <th>Easy to Use</th>
-            </tr>
-            <tr>
-                <td><i class="fa-regular fa-floppy-disk" style="color: #74C0FC;"></i></td>
-                <td><i class="fa-solid fa-layer-group" style="color: #74C0FC;"></i></td>
-                <td><i class="fa-solid fa-code" style="color: #74C0FC;"></i></td>
             </tr>
             <tr>
                 <td>This theme will look great on any device,no matter the site!</td>
