--- a/week1/day5/Mini -Project/index.html
+++ b/week1/day5/Mini -Project/index.html
@@ -7,7 +7,14 @@
     <title>Shopping Website</title>
   </head>
   <body>
-    <!-- navbar here -->
-    <!-- footer here -->
+   <nav>
+    <ul class="crownicon">
+      <li><a href=""><i class="fa-solid fa-crown fa-2xl" style="color: #ffffff;"></i></a></li>
+      <li class="right"><a href="#about">About</a></li>
+    </ul>
+   </nav>
+  <div class="footer">
+  <p>Estelle Manon - 2025</p>
+</div>
   </body>
 </html>
