--- a/week1/day5/Mini -Project/products.html
+++ b/week1/day5/Mini -Project/products.html
@@ -13,7 +13,8 @@
     <img src="img/image1.png" alt="">
 </div>
 <div class="products">
-    <span class="discount">-12</span>
+    <span class="discount">-10</span>
+    <span class="new">NEW</span>
     <img src="img/image2.png" alt="">
 </div>
 <div class="products">
