--- a/week1/day3/ExcerciseDaily/index.html
+++ b/week1/day3/ExcerciseDaily/index.html
@@ -15,5 +15,6 @@
     <div class="circle">circle</div>
     <div class="threed">Shadow</div>
     <div class="border">border</div>
+    <div class="swing">swing</div>
 </body>
 </html>
