--- a/week1/day3/ExcerciseDaily/index.html
+++ b/week1/day3/ExcerciseDaily/index.html
@@ -9,12 +9,12 @@
 <body>
     <div class="fade">fade</div>
     <div class="color">color</div>
-    <div class="grow">grow</div>
     <div class="shrink">shrink</div>
     <div class="rotate">rotate</div>
     <div class="circle">circle</div>
     <div class="threed">Shadow</div>
     <div class="border">border</div>
     <div class="swing">swing</div>
+    <div class="grow">GROW</div>
 </body>
 </html>
