--- a/week1/day5/Mini-Project/products.html
+++ b/week1/day5/Mini-Project/products.html
@@ -25,11 +25,14 @@
    </nav>
 
 <div class="products">
-    <span class="discount">-10</span>
+    <span class="discount">-10%</span>
     <span class="new">NEW</span>
     <img src="img/image1.png" alt="">
-    <!-- <span class="old-price">43 USD</span>
-    <span class="current-price">35 USD</span> -->
+    <div class="productname">Elegant Woman Black Top</div>
+    <div class="design">
+        <span class="current-price">$ 35.99 </span>
+        <span class="old-price">$ 43.10 </span>
+    </div>
 </div>
 <div class="products">
     <span class="discount">-10</span>
