--- a/week1/day5/Mini-Project/products.html
+++ b/week1/day5/Mini-Project/products.html
@@ -35,60 +35,116 @@
     </div>
 </div>
 <div class="products">
-    <span class="discount">-10</span>
-    <span class="new">NEW</span>
+    <span class="discount">-10%</span>
     <img src="img/image3.png" alt="">
+    <div class="productname">Long Sleeve White Blouse</div>
+    <div class="design">
+        <span class="current-price">$ 25.99 </span>
+        <span class="old-price">$ 36.10 </span>
+    </div>
 </div>
 <div class="products">
-    <span class="discount">-10</span>
+    <span class="discount">-12%</span>
     <span class="new">NEW</span>
     <img src="img/pexels-kowalievska-1055691.jpg" alt="">
+    <div class="productname">Winter Yellow Dress</div>
+    <div class="design">
+        <span class="current-price">$ 79.72 </span>
+        <span class="old-price">$ 90.59</span>
+    </div>
+    
 </div>
 <div class="products">
-    <span class="discount">-10</span>
+    <span class="discount">-10%</span>
     <span class="new">NEW</span>
     <img src="img/image4.png" alt="">
+    <div class="productname">Women's White Top </div>
+    <div class="design">
+        <span class="current-price">$ 14.40 </span>
+        <span class="old-price">$ 14.40</span>
+    </div>
 </div>
 <div class="products">
-    <span class="discount">-10</span>
-    <span class="new">NEW</span>
+    <span class="discount">-18%</span>
     <img src="img/pexels-alipazani-2887766.jpg" alt="">
+    <div class="productname">Women's Black Coat </div>
+    <div class="design">
+        <span class="current-price">$ 123.00 </span>
+        <span class="old-price">$ 150.00</span>
+    </div>
 </div>
 <div class="products">
-    <span class="discount">-10</span>
+    <span class="discount">-5%</span>
     <span class="new">NEW</span>
     <img src="img/pexels-athena-2043590.jpg" alt="">
+    <div class="productname">Long Pink Coat </div>
+    <div class="design">
+        <span class="current-price">$ 118.75 </span>
+        <span class="old-price">$ 125</span>
+    </div>
 </div>
 <div class="products">
-    <span class="discount">-10</span>
+    <span class="discount">-10%</span>
     <span class="new">NEW</span>
     <img src="img/pexels-bertellifotografia-573302.jpg" alt="">
+    <div class="productname">Sexy White Dress </div>
+    <div class="design">
+        <span class="current-price">$ 105.00 </span>
+        <span class="old-price">$ 150.00</span>
+    </div>
 </div>
 <div class="products">
-    <span class="discount">-10</span>
+    <span class="discount">-10%</span>
     <span class="new">NEW</span>
     <img src="img/pexels-cottonbro-4937449.jpg" alt="">
+    <div class="productname"> Classic Orange Set </div>
+    <div class="design">
+        <span class="current-price">$ 105.00 </span>
+        <span class="old-price">$ 150.00</span>
+    </div>
 </div>
 <div class="products">
-    <span class="discount">-10</span>
+    <span class="discount">-40%</span>
     <span class="new">NEW</span>
     <img src="img/image2.png" alt="">
+    <div class="productname"> Men's Blue Shirt </div>
+    <div class="design">
+        <span class="current-price">$ 18.00 </span>
+        <span class="old-price">$ 30.00</span>
+    </div>
+</div>
 </div>
 <div class="products">
-    <span class="discount">-10</span>
+    <span class="discount">-5%</span>
     <span class="new">NEW</span>
     <img src="img/pexels-hazardos-1475418.jpg" alt="">
+    <div class="productname"> Trouble Pink Hoodie </div>
+    <div class="design">
+        <span class="current-price">$ 86.00 </span>
+        <span class="old-price">$ 95.00</span>
+    </div>
 </div>
 <div class="products">
-    <span class="discount">-10</span>
+    <span class="discount">-10%</span>
     <span class="new">NEW</span>
     <img src="img/pexels-jimmybronx01-1777298.jpg" alt="">
+    <div class="productname"> Sexy Blue Strips Blouse</div>
+    <div class="design">
+        <span class="current-price">$ 63.00 </span>
+        <span class="old-price">$ 70.00</span>
+    </div>
 </div>
 
 <div class="products">
     <span class="discount">-10</span>
     <span class="new">NEW</span>
     <img src="img/pexels-myca-1152994.jpg" alt="">
+    <div class="productname"> Mustard Skirt with lace </div>
+    <div class="design">
+        <span class="current-price">$ 45.00 </span>
+        <span class="old-price">$ 59.00</span>
+    </div>
+
 </div>
 <!-- <div class="footer">
     <p>Please visit us at tribecca for more info!! </p>
