--- a/week2/day4/components.html
+++ b/week2/day4/components.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.0/css/all.min.css">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
@@ -58,6 +59,25 @@
     <h1 class="mb-3">Hello, world!</h1>
     <h4 class="mb-3">This is Exercise #9. It includes a large callout called a jumbotron and three supporting pieces of content.</h4>
     <a class="btn btn-primary" href="" role="button">Learn more</a>
-  </div>
+  </div><br><br>
+    <div class="row">
+        <div class="col-md-1"></div>
+        <div class="col-md-3 ">
+            <H2>Heading</H2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam saepe consequuntur earum sit accusamus maiores qui doloribus velit sunt explicabo rerum nisi repellendus quo repellat expedita suscipit, illum iste? Quo.</p>
+            <button type="button" class="btn btn-light"><i class="fa-solid fa-chart-simple"></i> View details</button>
+        </div>
+        <div class="col-md-3 ">
+            <H2>Heading</H2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam saepe consequuntur earum sit accusamus maiores qui doloribus velit sunt explicabo rerum nisi repellendus quo repellat expedita suscipit, illum iste? Quo.</p>
+            <button type="button" class="btn btn-light"><i class="fa-solid fa-phone"></i> View details</button>
+        </div>
+        <div class="col-md-3">
+            <H2>Heading <span class="badge badge-secondary">New</span></H2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam saepe consequuntur earum sit accusamus maiores qui doloribus velit sunt explicabo rerum nisi repellendus quo repellat expedita suscipit, illum iste? Quo.</p>
+            <button type="button" class="btn btn-light "><i class="fa-solid fa-location-pin"></i> View details</button>
+        </div>
+        <div class="col-md-1"></div>
+    </div>
 </body>
 </html>
