--- a/week2/day4/components.html
+++ b/week2/day4/components.html
@@ -62,7 +62,7 @@
   </div><br><br>
     <div class="row">
         <div class="col-md-1"></div>
-        <div class="col-md-3 ">
+        <div class="col-md-3">
             <H2>Heading</H2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam saepe consequuntur earum sit accusamus maiores qui doloribus velit sunt explicabo rerum nisi repellendus quo repellat expedita suscipit, illum iste? Quo.</p>
             <button type="button" class="btn btn-light"><i class="fa-solid fa-chart-simple"></i> View details</button>
@@ -73,7 +73,7 @@
             <button type="button" class="btn btn-light"><i class="fa-solid fa-phone"></i> View details</button>
         </div>
         <div class="col-md-3">
-            <H2>Heading <span class="badge badge-secondary">New</span></H2>
+        <h2>Example heading <span class="badge badge-secondary">New</span></h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam saepe consequuntur earum sit accusamus maiores qui doloribus velit sunt explicabo rerum nisi repellendus quo repellat expedita suscipit, illum iste? Quo.</p>
             <button type="button" class="btn btn-light "><i class="fa-solid fa-location-pin"></i> View details</button>
         </div>
