--- a/week1/day5/Mini-Project/products.html
+++ b/week1/day5/Mini-Project/products.html
@@ -33,6 +33,9 @@
         <span class="current-price">$ 35.99 </span>
         <span class="old-price">$ 43.10 </span>
     </div>
+    <div class="addtocart">
+    <button type="button">ADD TO CART</button>
+    </div>
 </div>
 <div class="products">
     <span class="discount">-10%</span>
@@ -41,6 +44,9 @@
     <div class="design">
         <span class="current-price">$ 25.99 </span>
         <span class="old-price">$ 36.10 </span>
+    </div>
+    <div class="addtocart">
+    <button type="button">ADD TO CART</button>
     </div>
 </div>
 <div class="products">
@@ -52,7 +58,9 @@
         <span class="current-price">$ 79.72 </span>
         <span class="old-price">$ 90.59</span>
     </div>
-    
+    <div class="addtocart">
+    <button type="button">ADD TO CART</button>
+    </div>
 </div>
 <div class="products">
     <span class="discount">-10%</span>
@@ -63,6 +71,9 @@
         <span class="current-price">$ 14.40 </span>
         <span class="old-price">$ 14.40</span>
     </div>
+    <div class="addtocart">
+    <button type="button">ADD TO CART</button>
+    </div>
 </div>
 <div class="products">
     <span class="discount">-18%</span>
@@ -71,6 +82,9 @@
     <div class="design">
         <span class="current-price">$ 123.00 </span>
         <span class="old-price">$ 150.00</span>
+    </div>
+    <div class="addtocart">
+    <button type="button">ADD TO CART</button>
     </div>
 </div>
 <div class="products">
@@ -82,6 +96,9 @@
         <span class="current-price">$ 118.75 </span>
         <span class="old-price">$ 125</span>
     </div>
+    <div class="addtocart">
+    <button type="button">ADD TO CART</button>
+    </div>
 </div>
 <div class="products">
     <span class="discount">-10%</span>
@@ -91,6 +108,9 @@
     <div class="design">
         <span class="current-price">$ 105.00 </span>
         <span class="old-price">$ 150.00</span>
+    </div>
+    <div class="addtocart">
+    <button type="button">ADD TO CART</button>
     </div>
 </div>
 <div class="products">
@@ -102,6 +122,9 @@
         <span class="current-price">$ 105.00 </span>
         <span class="old-price">$ 150.00</span>
     </div>
+    <div class="addtocart">
+    <button type="button">ADD TO CART</button>
+    </div>
 </div>
 <div class="products">
     <span class="discount">-40%</span>
@@ -111,6 +134,9 @@
     <div class="design">
         <span class="current-price">$ 18.00 </span>
         <span class="old-price">$ 30.00</span>
+    </div>
+    <div class="addtocart">
+    <button type="button">ADD TO CART</button>
     </div>
 </div>
 </div>
@@ -123,6 +149,9 @@
         <span class="current-price">$ 86.00 </span>
         <span class="old-price">$ 95.00</span>
     </div>
+    <div class="addtocart">
+    <button type="button">ADD TO CART</button>
+    </div>
 </div>
 <div class="products">
     <span class="discount">-10%</span>
@@ -132,6 +161,9 @@
     <div class="design">
         <span class="current-price">$ 63.00 </span>
         <span class="old-price">$ 70.00</span>
+    </div>
+    <div class="addtocart">
+    <button type="button">ADD TO CART</button>
     </div>
 </div>
 
@@ -144,7 +176,9 @@
         <span class="current-price">$ 45.00 </span>
         <span class="old-price">$ 59.00</span>
     </div>
-
+    <div class="addtocart">
+    <button type="button">ADD TO CART</button>
+    </div>
 </div>
 <!-- <div class="footer">
     <p>Please visit us at tribecca for more info!! </p>
