--- a/week2/day4/components.html
+++ b/week2/day4/components.html
@@ -34,6 +34,7 @@
         <li class="nav-item">
             <a class="nav-link" href="#">Contact <span class="badge rounded-pill text-white bg-secondary">3</span></a>
         </li>
+        <li>
         <div class="dropdown">
             <button class="btn btn-dark text-white-50 dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</button>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
@@ -42,17 +43,22 @@
                 <li><a class="dropdown-item" href="#">Something else here</a></li>
             </ul>
         </div>
-        <form class="form-inline ml-auto">
+        </li>
+    </ul>
+    <ul>
+        <li>
+            <form class="form-inline ml-auto">
             <div class="row">
-            <div class="col-md-5">
+            <div class="col-md-4">
                 <input type="email" class="form-control mb-2 mr-sm-2" id="inlineFormInputGroup" placeholder="Email">
             </div>
-            <div class="col-md-5">
+            <div class="col-md-4">
                 <input type="password" class="form-control mb-2 mr-sm-2" id="inlineFormInputGroup" placeholder="Password">
-            </div>
+            </div class="col-md-2">
             <button type="submit" class="btn btn-success mb-2 col-md-2">Sign in</button>
             </div>
         </form>
+        </li>
     </ul>
     </nav>
   <div class="p-5 bg-light">
@@ -73,7 +79,7 @@
             <button type="button" class="btn btn-light"><i class="fa-solid fa-phone"></i> View details</button>
         </div>
         <div class="col-md-3">
-        <h2>Example heading <span class="badge badge-secondary">New</span></h2>
+        <h2>Heading <button type="button" class="btn btn-primary"> New </button></h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam saepe consequuntur earum sit accusamus maiores qui doloribus velit sunt explicabo rerum nisi repellendus quo repellat expedita suscipit, illum iste? Quo.</p>
             <button type="button" class="btn btn-light "><i class="fa-solid fa-location-pin"></i> View details</button>
         </div>
