--- a/week1/day4/Dailychallenge-mediaqueries/avengers.html
+++ b/week1/day4/Dailychallenge-mediaqueries/avengers.html
@@ -7,29 +7,27 @@
     <title>AVENGERS</title>
   </head>
   <body>
-    <nav>
-    <ul class="thor">
-      <li><a href=""><i class="fa-brands fa-vnv fa-2xl" style="color: #ffffff;"></i></i></i></a></li>
-      <li class="right"><a href="#characters">HELP</a></li>
-      <li class="right"><a href="#about">ABOUT</a></li>
-      <li class="right"><a href="#help">CHARACTERS</a></li>
-    </ul>
+    <nav class="banner">
+      <ul class="thor">
+        <li><a href=""><i class="fa-brands fa-vnv fa-2xl" style="color: #ffffff;"></i></i></i></a></li>
+        <li class="right"><a href="#characters">HELP</a></li>
+        <li class="right"><a href="#about">ABOUT</a></li>
+        <li class="right"><a href="#help">CHARACTERS</a></li>
+      </ul>
    </nav>
    <div class="textthor">
-    <div class="image"></div>
-    <div class="thordetails">
-      <h1>THOR ODINSON</h1>
-      <P>"Thor is the "God of Thunder",a member of the race known as the Asgardians, 
-a group of humanoid beings from the pocket dimension of Asgard, the Realm Eternal.
-Thor is the son of Odin, the All-Father and king of Asgard. He was worshiped by the humans known as 
-Vikings and became part of Norse Mythology. Armed with his enchanted Uru hammer Mjolnir,
-which helps him to channel his godly energies, he became the mightiest warrior in the Ten Realms. 
-When his irresponsible and impetuous behavior became too much, Odin sent him to Midgard
-(more commonly known as Earth) as a disabled mortal medical student named Donald Blake,
-stripped of his memory. After learning humility he regained his memory as well as his godly powers.
-Thor went on to become a champion for Midgard as well as one of the founding members of the Avengers, 
-"Earth's Mightiest Heroes".</P>
-   </div>
+    <div class="thortitle"><h1>THOR ODINSON</h1></div>
+    <div class="thorpara"><p>"Thor is the "God of Thunder",a member of the race known as the Asgardians, 
+        a group of humanoid beings from the pocket dimension of Asgard, the Realm Eternal.
+        Thor is the son of Odin, the All-Father and king of Asgard. He was worshiped by the humans known as 
+        Vikings and became part of Norse Mythology. Armed with his enchanted Uru hammer Mjolnir,
+        which helps him to channel his godly energies, he became the mightiest warrior in the Ten Realms. 
+        When his irresponsible and impetuous behavior became too much, Odin sent him to Midgard
+        (more commonly known as Earth) as a disabled mortal medical student named Donald Blake,
+        stripped of his memory. After learning humility he regained his memory as well as his godly powers.
+        Thor went on to become a champion for Midgard as well as one of the founding members of the Avengers, 
+        "Earth's Mightiest Heroes".</p>
+    </div>
    </div>
   </body>
 </html>
