--- a/week1/day4/Dailychallenge-mediaqueries/avengers.html
+++ b/week1/day4/Dailychallenge-mediaqueries/avengers.html
@@ -7,13 +7,13 @@
     <title>AVENGERS</title>
   </head>
   <body>
-    <nav class="banner">
-      <ul class="thor">
-        <li><a href=""><i class="fa-brands fa-vnv fa-2xl" style="color: #ffffff;"></i></i></i></a></li>
-        <li class="right"><a href="#characters">HELP</a></li>
-        <li class="right"><a href="#about">ABOUT</a></li>
-        <li class="right"><a href="#help">CHARACTERS</a></li>
-      </ul>
+      <nav class="banner">
+        <ul class="thor">
+          <li><a href=""><i class="fa-brands fa-vnv fa-2xl" style="color: #ffffff;"></i></a></li>
+          <li class="right"><a href="#characters">HELP</a></li>
+          <li class="right"><a href="#about">ABOUT</a></li>
+          <li class="right"><a href="#help">CHARACTERS</a></li>
+        </ul>
    </nav>
    <div class="textthor">
     <div class="thortitle"><h1>THOR ODINSON</h1></div>
