--- a/week2/day4/components2.html
+++ b/week2/day4/components2.html
@@ -5,23 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
-    
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.0/css/all.min.css">
+    <style>
+    .nav-link{
+        color:grey;
+    }
+    .nav-link:hover{
+        color: white;
+    }
+    .navbar-brand{
+         color:grey;
+    }
+    .nav-link{
+      color: grey;
+    }
+</style>
+    <title>Component</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+        <li class="nav-item">
+            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        </li> 
+    <a class="navbar-brand" href="#">Project Exercise #9</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active text-secondary" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="#">About</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="#">Contact <span class="badge rounded-pill text-white bg-secondary">3</span></a>
@@ -42,11 +59,36 @@
         </li>
       </ul>
       <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
+        <input class="form-control me-2" type="email" placeholder="Email" aria-label="Search">
+        <input class="form-control me-2" type="password" placeholder="Password" aria-label="Search">
+        <button class="btn btn-success" type="submit">Search</button>
       </form>
     </div>
   </div>
 </nav>
+<div class="p-5 bg-light">
+    <h1 class="mb-3">Hello, world!</h1>
+    <h4 class="mb-3">This is Exercise #9. It includes a large callout called a jumbotron and three supporting pieces of content.</h4>
+    <a class="btn btn-primary" href="" role="button">Learn more</a>
+  </div><br><br>
+    <div class="row">
+        <div class="col-md-1"></div>
+        <div class="col-md-3">
+            <H2>Heading</H2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam saepe consequuntur earum sit accusamus maiores qui doloribus velit sunt explicabo rerum nisi repellendus quo repellat expedita suscipit, illum iste? Quo.</p>
+            <button type="button" class="btn btn-light"><i class="fa-solid fa-chart-simple"></i> View details</button>
+        </div>
+        <div class="col-md-3 ">
+            <H2>Heading</H2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam saepe consequuntur earum sit accusamus maiores qui doloribus velit sunt explicabo rerum nisi repellendus quo repellat expedita suscipit, illum iste? Quo.</p>
+            <button type="button" class="btn btn-light"><i class="fa-solid fa-phone"></i> View details</button>
+        </div>
+        <div class="col-md-3">
+        <h2>Heading <button type="button" class="btn btn-primary"> New </button></h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam saepe consequuntur earum sit accusamus maiores qui doloribus velit sunt explicabo rerum nisi repellendus quo repellat expedita suscipit, illum iste? Quo.</p>
+            <button type="button" class="btn btn-light "><i class="fa-solid fa-location-pin"></i> View details</button>
+        </div>
+        <div class="col-md-1"></div>
+    </div>
 </body>
 </html>
