--- a/week2/day4/components2.html
+++ b/week2/day4/components2.html
@@ -61,7 +61,7 @@
       <form class="d-flex">
         <input class="form-control me-2" type="email" placeholder="Email" aria-label="Search">
         <input class="form-control me-2" type="password" placeholder="Password" aria-label="Search">
-        <button class="btn btn-success" type="submit">Search</button>
+        <button class="btn btn-success p-2 text-nowrap" type="submit">Sign In</button>
       </form>
     </div>
   </div>
