--- a/week2/day5/PortfolioProject/portfolio.html
+++ b/week2/day5/PortfolioProject/portfolio.html
@@ -40,6 +40,49 @@
     </div>
   </div>
 </nav>
-
+<section class="Home">
+  <div class="homecontainer">
+    <h1>HEY,I'M ESTELLE MANON</h1>
+    <div class="briefpresentation">A passionate developer dedicated to crafting solutions that don't just meet requirements—but reflect the heart of your vision.</div>
+    <div class="brieftag">Coding with care, delivering with soul</div>
+    <div class="brieftag2">Want to know more about my projects.</div>
+    <div class="buttonproject"><button type="button" class="btn btn-dark">Hit me!</button></div>
+  </div>
+</section>
+<section class="About">
+  <div class="aboutcontainer">
+    <div class="bigtitle">ABOUT ME</div>
+    <div class="subtitles">In this section you can find more information about me, what i have done, what i do and my current skills.</div>
+    <div class="gridcontainer">
+      <div>
+        <span class="infoknowme">Get to know me further!!!</span>
+      </div>
+      <div>
+        <span class="infoknowme">My Skils </span>
+      </div> 
+      <div>
+       <div>Im a frontend</div>
+      </div>
+      <div>
+        <div>button</div>
+      </div>            
+    </div>
+  </div>
+</section>
+<section class="projects">
+      <div class="bigtitle" >PROJECTS</div>
+      <div class="subtitles">Take a look at some of the projects I've brought to life for both myself and my clients. Each comes with its own case study, so you can see the thinking and creativity behind the code.</div>
+    <div class="gridcontainer2">
+      <div class="imgproject"></div>
+      <div class="textprojects">
+        <div class="infoknowme">Landing page with revies</div>
+        <div class="description">The landing page contain the brief figures of the company. Css has been used to develop the different figureson the pages </div>
+        <div class="badges">
+          <div class="buttonproject1"><button type="button" class="btn btn-secondary">CSS</button></div>
+          <div class="buttonproject1"><button type="button" class="btn btn-secondary">HTML</button></div>
+        </div>
+      </div>
+    </div>
+</section>
 </body>
 </html>
