--- a/week2/day5/PortfolioProject/portfolio.html
+++ b/week2/day5/PortfolioProject/portfolio.html
@@ -65,13 +65,21 @@
         <div class="textdesc">Feel free to <b>Connect</b> or <b>Follow</b> me on my Linkedin and Instagram where I post useful content related to Web Development and Programming</div><br>
         <div class="textdesc">I'm open to Job opportunities where I can contribute, learn and grow. If you have a good opportunity that matches my skills and experience then don't hesitate to contact me.</div><br>
         <div class="btnboth">
-          <div class="buttonproject1"><button type="button" class="btn btn-secondary">Contact Me</button></div><br>
-          <div><a href="file:///C:/Users/emanon/Desktop/bootcamp_177/week2/day5/PortfolioProject/Resume.pdf" target="_blank"><button type="button" class="btn btn-secondary">View my Resume</button></a></div>
+          <div class="buttonproject"><button type="button" class="btn btn-secondary">Contact Me</button></div><br>
+          <div ><a href="file:///C:/Users/emanon/Desktop/bootcamp_177/week2/day5/PortfolioProject/Resume.pdf" target="_blank"><button type="button" class="btn btn-secondary">View my Resume</button></a></div>
         </div>
       </div>
       <div>
-        <span class="infoknowme">My Skills </span>
-      </div>             
+        <span class="infoknowme">My Skills </span><br><br>
+      <div class="skillsset">
+        <div class="skibtn"><button type="button" class="btn">CSS</button></div>
+        <div class="skibtn1"><button type="button" class="btn2">HTML</button></div>
+        <div class="skibtn"><button type="button" class="btn">SQL</button></div>
+        <div class="skibtn1"><button type="button" class="btn2">PHP</button></div>
+        <div class="skibtn"><button type="button" class="btn">Git</button></div>
+        <div class="skibtn1"><button type="button" class="btn2">Github</button></div>
+      </div>  
+      </div>
     </div>
   </div>
 </section>
@@ -84,8 +92,8 @@
       <div class="imgproject2"><img src="item1.png" alt="" width="370px" height="218px"></div>
       </div>
       <div class="textprojects">
-        <div class="infoknowme">Landing page with reviews</div>
-        <div class="description">The landing page contain the brief figures of the company. Css has been used to develop the different figureson the pages </div>
+        <div class="infoknowme">PORTFOLIO</div>
+        <div class="description">This page contain information about a person's information and qualification enabling a potential employer to have an introduction on the candidate.<br>Css has been used to develop the different figures on the pages </div><br><br>
         <div class="badges">
           <div class="buttonproject1"><button type="button" class="btn btn-secondary">CSS</button></div>
           <div class="buttonproject1"><button type="button" class="btn btn-secondary">HTML</button></div>
@@ -96,8 +104,8 @@
       <div class="imgproject2"><img src="item2.png" alt="" width="370px" height="218px"></div>
       </div>
       <div class="textprojects">
-        <div class="infoknowme">Landing page with reviews</div>
-        <div class="description">The landing page contain the brief figures of the company. Css has been used to develop the different figureson the pages </div>
+        <div class="infoknowme">LANDING PAGE WITH REVIEWS</div>
+        <div class="description">The landing page contain the brief figures of the company and the reviews of people that has work with this company. At a glance, other companies can overview the informations on the landing page.<br>CSS has been used to develop the different figures on the pages and HTML coding has been used </div><br><br>
         <div class="badges">
           <div class="buttonproject1"><button type="button" class="btn btn-secondary">CSS</button></div>
           <div class="buttonproject1"><button type="button" class="btn btn-secondary">HTML</button></div>
@@ -108,10 +116,10 @@
       <div class="imgproject2"><img src="item3.png" alt="" width="370px" height="218px"></div>
       </div>
       <div class="textprojects">
-        <div class="infoknowme">Landing page with reviews</div>
-        <div class="description">The landing page contain the brief figures of the company. Css has been used to develop the different figureson the pages </div>
+        <div class="infoknowme">SHOPPING WEBSITE</div>
+        <div class="description">Shopping website has been created with all the items to be sold for blackhorse Ltd. Discount badges and New badges added to the different items toshow the items that are new or has been discounted</div><br><br>
         <div class="badges">
-          <div class="buttonproject1"><button type="button" class="btn btn-secondary">CSS</button></div>
+          <div class="buttonproject1"><button type="button" class="btn btn-secondary">CSS</button></div><br><br>
           <div class="buttonproject1"><button type="button" class="btn btn-secondary">HTML</button></div>
         </div>
       </div>
@@ -119,7 +127,7 @@
 </section>
 <section id="contact">
     <div class="bigtitle" >CONTACT</div>
-    <div class="subtitles">Take a look at some of the projects I've brought to life for both myself and my clients. Each comes with its own case study, so you can see the thinking and creativity behind the code.</div>
+    <div class="subtitles">You can leave your contact details and message for your to revert to you </div>
 <form>
   <div class="form-group">
     <label for="exampleFormControlInput1">Name</label>
