--- a/week2/day5/PortfolioProject/portfolio.html
+++ b/week2/day5/PortfolioProject/portfolio.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="savedjobs.html">
@@ -143,5 +144,18 @@
     <div class="buttonproject2"><button type="button" class="btn1">SUBMIT</button></div>
 </form>
 </section>
+<footer>
+    <div class="footercontent">
+      <p>Made by Estelle Manon</p>
+      <h4> SOCIAL</h4>
+      <div class="social-icons">
+        <a href="#"><i id="fa-icon" class="fa-brands fa-facebook"></i></a>
+        <a href="#"><i id="fa-icon" class="fa-brands fa-twitter"></i></a>
+        <a href="#"><i id="fa-icon" class="fa-brands fa-instagram"></i></a>
+        <a href="#"><i id="fa-icon" class="fa-brands fa-linkedin-in"></i></a>
+        <a href="#"><i id="fa-icon" class="fa-brands fa-github"></i></i></a>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
