--- a/week1/day4/Dailychallenge-mediaqueries/avengers.html
+++ b/week1/day4/Dailychallenge-mediaqueries/avengers.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.0/css/all.min.css">
-    <link rel="stylesheet" href="avengers.css">
-    <title>AVENGERS</title>
-  </head>
-  <body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.0/css/all.min.css">
+  <link rel="stylesheet" href="avengers.css">
+  <title>AVENGERS</title>
+</head>
+<body>
+
+  <section class="navbar">
       <nav class="banner">
         <ul class="thor">
-          <li><a href=""><i class="fa-brands fa-vnv fa-2xl" style="color: #ffffff;"></i></a></li>
+          <li><a href=""><i class="fa-brands fa-vnv fa-2xl"></i></a></li>
           <li class="right"><a href="#characters">HELP</a></li>
           <li class="right"><a href="#about">ABOUT</a></li>
           <li class="right"><a href="#help">CHARACTERS</a></li>
         </ul>
    </nav>
-   <div class="textthor">
+  </section>
+   <section id="ThorWhole">
+   <img src="thor.jpg" alt="">
     <div class="thortitle"><h1>THOR ODINSON</h1></div>
     <div class="thorpara"><p>"Thor is the "God of Thunder",a member of the race known as the Asgardians, 
         a group of humanoid beings from the pocket dimension of Asgard, the Realm Eternal.
@@ -28,6 +33,6 @@
         Thor went on to become a champion for Midgard as well as one of the founding members of the Avengers, 
         "Earth's Mightiest Heroes".</p>
     </div>
-   </div>
-  </body>
+</section>
+</body>
 </html>
